# PythonDAQ

./: ElectronicLoadMeasurement.py  Experiment.py  ProtoTyping.py  README.md  arduino_device.py  diode_experiment.py  mkdocs.yml  pyproject.toml  view.py
DataStore/: ExperimentData_0.csv  ExperimentData_1.csv  ExperimentData_10.csv  ExperimentData_11.csv  ExperimentData_12.csv  ExperimentData_13.csv  ExperimentData_14.csv  ExperimentData_15.csv  ExperimentData_16.csv  ExperimentData_17.csv  ExperimentData_18.csv  ExperimentData_19.csv  ExperimentData_2.csv  ExperimentData_20.csv  ExperimentData_21.csv  ExperimentData_22.csv  ExperimentData_8.csv  ExperimentData_9.csv  ExperimentData_GUI_test_1.csv  ExperimentData_GUI_test_2.csv  ExperimentData_GUI_test_3.csv
docs/: cli.md  controller.md  index.md  model.md
src/pythondaq/: diode_experiment.py  model.py  view.py
src/pythondaq/controllers/: arduino_device.py
src/pythondaq/models/: diode_experiment.py
src/pythondaq/views/: cli.py  gui.py  view.py
tests/: __init__.py
