[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Kevin-Veenboer <135600479+Kevin-Veenboer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.1"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"
click = "^8.1.7"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.4.10"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
view_experiment = "pythondaq.views.view:main"
diode = "pythondaq.views.cli:cmd_group"